<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_baseline_home_24"/>
        <item
            android:id="@+id/nav_search"
            android:title="@string/search"
            android:icon="@drawable/ic_baseline_search_24"/>
        <item
            android:id="@+id/nav_all_categories"
            android:title="@string/catogeries"
            android:icon="@drawable/catogery_icon"/>
        <item
            android:id="@+id/nav_add_missing_places"
            android:title="@string/place"
            android:icon="@drawable/missing_place_24"/>

    </group>

    <item android:title="@string/profile">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/login_icon"/>
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/profile_icon"/>
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/ic_baseline_cancel_schedule_send_24"/>

            </group>


        </menu>





    </item>

    <item android:title="Category">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_restaurant"
                    android:title="@string/restaurants"
                    android:icon="@drawable/ic_baseline_restaurant_24"/>
                <item
                    android:id="@+id/nav_shops"
                    android:title="@string/shops"
                    android:icon="@drawable/ic_baseline_shop_24"/>
                <item
                    android:id="@+id/nav_airport"
                    android:title="@string/airports"
                    android:icon="@drawable/ic_baseline_local_airport_24"/>
                <item
                    android:id="@+id/nav_hotel"
                    android:title="@string/hotels"
                    android:icon="@drawable/ic_baseline_hotel_24"/>

            </group>


        </menu>





    </item>

    <item android:title="Share">

        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_share"
                    android:title="SHARE"
                    android:icon="@drawable/ic_baseline_share_24"/>
                <item
                    android:id="@+id/nav_rate_us"
                    android:title="RATE US"
                    android:icon="@drawable/ic_baseline_rate_review_24"/>

            </group>


        </menu>





    </item>

</menu>