<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@color/white"
    tools:context=".comman.LoginSignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/ic_baseline_account_circle_24"/>
        
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retailer_heading"
            android:textSize="36sp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="36dp"/>

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retailer_tag_line"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="12dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="8dp">


            <Button
                android:id="@+id/sign_up_login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:background="@drawable/button_background"
                android:layout_marginRight="10dp"
                android:transitionName="transition_login"/>

            <Button
                android:id="@+id/join_us_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/join_button"
                android:layout_marginLeft="10dp"
                android:transitionName="transition_join_us_button"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/how_we_work_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:fontFamily="sans-serif-black"
                android:textSize="16sp"
                android:text="@string/work"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>


    </LinearLayout>




</ScrollView>