<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="transition_OTP_screen"
    android:background="@color/white"
    tools:context=".comman.VerifyOTP">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_cancel_24"
            android:tint="@color/black"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_code_text"
            android:textSize="100sp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:includeFontPadding="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification_text"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:includeFontPadding="false"/>


        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_description_text"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:includeFontPadding="false"/>

        <com.chaos.view.PinView
            android:id="@+id/pin_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemCount="6"
            app:itemHeight="50dp"
            app:itemWidth="50dp"
            app:itemRadius="5dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:itemBackground="@color/lightWhite"
            app:lineColor="@color/colorAccent"
            style="@style/PinWidget.PinView"
            android:cursorVisible="true"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"/>

        <Button
            android:layout_width="match_parent"
            android:onClick="callNextScreenFromOTP"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="VERIFY CODE"
            android:background="@color/colorPrimary"
            android:layout_marginTop="30dp"/>






    </LinearLayout>


</ScrollView>